--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightNavy">#4c51bd</color>
-    <color name="lighterNavy">#696DCE</color>
+    <color name="lighterNavy">#c9daf8</color>
+    <color name="mediumNavy">#4FA3C8</color>
+    <color name="lightGrey">#e0e0e0</color>
+    <color name="seafoamBlue">#80C7D8</color>
 </resources>
