--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="mediumNavy">#4FA3C8</color>
     <color name="lightGrey">#e0e0e0</color>
     <color name="seafoamBlue">#80C7D8</color>
+    <color name="darkYello">#FFD600</color>
+    <color name="darkGreen">#4A9B03</color>
 </resources>
