--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="seafoamBlue">#80C7D8</color>
     <color name="darkYello">#FFD600</color>
     <color name="darkGreen">#4A9B03</color>
+    <color name="lightBlue">#add8e6</color>
 </resources>
