--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="darkYello">#FFD600</color>
     <color name="darkGreen">#4A9B03</color>
     <color name="lightBlue">#add8e6</color>
+    <color name="textFieldBackgroundColor">#FFE5E5E5</color>
+    <color name="arrowColor">#C1C0C0</color>
 </resources>
